# affetto-nn-test

./: .gitignore  .gitmodules  README.md  pyproject.toml
apps/: _fit.py  _loader.py  _plot.py  collect_data_periodic_traj.py  collect_data_random_traj.py  collect_data_random_traj_by_andreas.py  control_mlp.py  generate_data_sin_pos_traj.py  generate_data_step_pos_traj.py  integrate_camera_with_affetto.py  model.py  predict_ctrl_input_esn.py  predict_ctrl_input_linear.py  predict_ctrl_input_mlp.py  predict_output_mlp.py  predict_states_linear.py  predict_states_mlp.py  predict_valve_press_linear.py  predict_valve_press_mlp.py  track_periodic_traj_esn.py  track_periodic_traj_linear.py  track_periodic_traj_mlp.py  track_recorded_traj_esn.py  track_recorded_traj_linear.py  track_recorded_traj_mlp.py  track_recorded_traj_reBASICS.py
apps/_obsolete/: control_mlp.py  generate_data_step_pos_traj.py  predict_output_linear.py  predict_valve_press_linear.py  predict_valve_press_mlp.py
apps/scripts/: plot.py  plot_collected_data.py  plot_control_mlp.py  plot_recorded_traj_reBASICS.py  plot_track_traj.py
scripts/: collect_data_periodic_traj.sh  command_history.zsh  extract_images.sh  extract_images_track_periodic.sh  predict_ctrl_input_linear.sh  predict_ctrl_input_linear_20220719.sh  predict_ctrl_input_mlp.sh  predict_ctrl_input_mlp_20220719.sh  predict_states_linear.sh  predict_states_mlp.sh  track_periodic_traj_esn_20220806.sh  track_periodic_traj_esn_20220812.sh  track_periodic_traj_linear_20220808.sh  track_periodic_traj_mlp_20220719.py  track_periodic_traj_mlp_20220719.sh  track_recorded_traj_reBASICS.sh
