[project]
name = "Affetto Controller Driven by Neural Networks"
version = "0.1.0"
description = "Control Affetto by artificial neural networks"
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
dependencies = [
    "numpy>=1.22.4",
    "matplotlib>=3.5.2",
    "pandas>=1.4.2",
    "scipy>=1.8.1",
    "scikit-learn>=1.1.1",
    "-e file:///${PROJECT_ROOT}/affctrllib#egg=affctrllib",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
[tool.pdm]
[tool.pyright]
extraPaths = [
    "__pypackages__/3.10/lib",
    "affctrllib",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
