[project]
name = "affetto-nn-test"
version = "0.1.0"
description = "Control Affetto by artificial neural networks"
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
dependencies = [
    "numpy>=1.22.4",
    "matplotlib>=3.5.2",
    "pandas>=1.4.2",
    "scipy>=1.8.1",
    "scikit-learn>=1.1.1",
]
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/affctrllib#egg=affctrllib",
]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["affetto_nn_test"]

[tool.pyright]
extraPaths = [
    "__pypackages__/3.10/lib",
    "affctrllib",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
